RESOLVED FIXED45901
Web Inspector: chrome crashes while restoring breakpoints
https://bugs.webkit.org/show_bug.cgi?id=45901
Summary Web Inspector: chrome crashes while restoring breakpoints
Pavel Podivilov
Reported 2010-09-16 09:54:28 PDT
Web Inspector: chrome crashes while restoring breakpoints http://code.google.com/p/chromium/issues/detail?id=55128
Attachments
Quick fix. (1.17 KB, patch)
2010-09-16 09:59 PDT, Pavel Podivilov
no flags
Pavel Podivilov
Comment 1 2010-09-16 09:59:25 PDT
Created attachment 67812 [details] Quick fix.
Pavel Feldman
Comment 2 2010-09-16 11:57:16 PDT
Note that you will have breakpoint stored with the default key as a fallback. So you will have a lot of them. Or was the failing on read? (Did you check whether read by this key succeeded?)
WebKit Commit Bot
Comment 3 2010-09-16 12:31:55 PDT
Comment on attachment 67812 [details] Quick fix. Clearing flags on attachment: 67812 Committed r67651: <http://trac.webkit.org/changeset/67651>
WebKit Commit Bot
Comment 4 2010-09-16 12:32:00 PDT
All reviewed patches have been landed. Closing bug.
Dimitri Glazkov (Google)
Comment 5 2010-09-19 15:07:39 PDT
Note You need to log in before you can comment on or make changes to this bug.