2010-09-16  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: quick fix for crash in InspectorController::loadBreakpoints caused by empty main resource
        https://bugs.webkit.org/show_bug.cgi?id=45901

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::breakpointsSettingKey):

Canonical link: https://commits.webkit.org/58374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67651 268f45cc-cd09-0410-ab3c-d52691b4dbfc